--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/favicon_io/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon_io/favicon-16x16.png" />
     <link rel="manifest" href="./src/assets/favicon_io/site.webmanifest" />
+    <link href="https://fonts.cdnfonts.com/css/major-birch" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/rem" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/rubik-2" rel="stylesheet">
+                
   </head>
   <body>
     <div id="root"></div>
