--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.cdnfonts.com/css/major-birch" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/rem" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/rubik-2" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/inclusive-sans-2" rel="stylesheet">
+                
                 
   </head>
   <body>
